--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
 <body>
 
   <!-- Header / Hero Section -->
-  <header>
-    <div>
-      <!-- Ask Copilot to teach you about `.svg`. 🙂 You'll need to resize the logo with CSS. -->
-      <img src="img/intel-header-logo.svg" alt="Intel Logo" />
-      <!-- Main Heading -->
-      <h1>
-        Sustainability Through the Ages
-      </h1>
+  <header class="hero">
+    <div class="hero-content">
+      <img src="img/intel-header-logo.svg" alt="Intel Logo" class="logo" />
 
-      <!-- Subheading / Description -->
+      <h1>Sustainability Through the Ages</h1>
+
       <p>
         Explore Intel's journey through time, discovering how our commitment
         to innovation has shaped a more sustainable future for technology 
@@ -28,61 +24,56 @@
   </header>
 
   <!-- Timeline Cards Section -->
-  <section>
+  <section class="timeline">
 
-    <!-- Card 1: 1968 -->
-    <div>
+    <div class="card">
       <h2>1968</h2>
       <h3>Intel Founded</h3>
-      <!-- Add image -->
-      <p>
+      <img src="img/1968.jpg" alt="Intel founding">
+      <p class="details">
         Robert Noyce and Gordon Moore rename the newly formed company 
         NM Electronics to Intel Corporation, laying the foundation for 
         decades of technological innovation.
       </p>
     </div>
 
-    <!-- Card 2: 1971 -->
-    <div>
+    <div class="card">
       <h2>1971</h2>
       <h3>First Microprocessor</h3>
-      <!-- Add image -->
-      <p>
+      <img src="img/1971.jpeg" alt="Microprocessor">
+      <p class="details">
         Intel debuts the 4004, the world's first commercial microprocessor, 
         igniting the microprocessor revolution and propelling the future 
         of computing devices.
       </p>
     </div>
 
-    <!-- Card 3: 1978 -->
-    <div>
+    <div class="card">
       <h2>1978</h2>
       <h3>8086 Processor</h3>
-      <!-- Add image -->
-      <p>
+      <img src="img/1978.jpeg" alt="8086 Processor">
+      <p class="details">
         Launch of the 8086 processor, establishing the x86 architecture 
         that drives countless PCs and servers in the modern era.
       </p>
     </div>
 
-    <!-- Card 4: 1985 -->
-    <div>
+    <div class="card">
       <h2>1985</h2>
       <h3>386 Processor</h3>
-      <!-- Add image -->
-      <p>
+      <img src="img/1985.jpg" alt="386 Processor">
+      <p class="details">
         Intel introduces the 386 processor with 32-bit architecture, 
         ushering in a new era of performance and multitasking for 
         personal computers.
       </p>
     </div>
 
-    <!-- Card 5: 2006 -->
-    <div>
+    <div class="card">
       <h2>2006</h2>
       <h3>Peak GHG Emissions</h3>
-      <!-- Add image -->
-      <p>
+      <img src="img/2006.jpeg" alt="Sustainability factory">
+      <p class="details">
         This year marks Intel's highest annual greenhouse gas emissions 
         for operations. Over subsequent years, Intel invests heavily in 
         chemical abatement, renewable energy, and energy-efficient 
@@ -90,54 +81,49 @@
       </p>
     </div>
 
-    <!-- Card 6: 2020 -->
-    <div>
+    <div class="card">
       <h2>2020</h2>
       <h3>RISE Strategy</h3>
-      <!-- Add image -->
-      <p>
-        Intel launches its RISE (Responsible, Inclusive, Sustainable, 
-        Enabling) strategy and 2030 goals, aiming to drive industry-wide 
-        progress on climate action, water stewardship, and waste reduction.
+      <img src="img/2020.jpg" alt="RISE Strategy">
+      <p class="details">
+        Intel launches its RISE strategy and 2030 goals, aiming to drive 
+        industry-wide progress on climate action, water stewardship, 
+        and waste reduction.
       </p>
     </div>
 
-    <!-- Card 7: 2022 -->
-    <div>
+    <div class="card">
       <h2>2022</h2>
       <h3>Net-Zero By 2040</h3>
-      <!-- Add image -->
-      <p>
+      <img src="img/2022.jpeg" alt="Net zero">
+      <p class="details">
         Intel announces its commitment to achieve net-zero greenhouse 
-        gas emissions (Scope 1 and 2) across its global operations 
-        by 2040, building on years of environmental initiatives.
+        gas emissions by 2040.
       </p>
     </div>
 
-    <!-- Card 8: 2023 -->
-    <div>
+    <div class="card">
       <h2>2023</h2>
       <h3>Renewable Electricity</h3>
-      <!-- Add image -->
-      <p>
-        The company achieves 99% renewable electricity usage worldwide, 
-        helping to drastically lower carbon emissions and driving progress 
-        toward Intel's long-term sustainability goals.
+      <img src="img/2023.jpg" alt="Renewable energy">
+      <p class="details">
+        The company achieves 99% renewable electricity usage worldwide.
       </p>
     </div>
 
-    <!-- Card 9: 2024 -->
-    <div>
+    <div class="card">
       <h2>2024</h2>
       <h3>Sustainability Summit</h3>
-      <!-- Add image -->
-      <p>
-        Intel hosts its first Sustainability Summit, uniting suppliers, 
-        government officials, and industry leaders to collaborate on 
-        next-generation sustainable semiconductor manufacturing.
+      <img src="img/2024.jpeg" alt="Summit">
+      <p class="details">
+        Intel hosts its first Sustainability Summit, uniting leaders 
+        to collaborate on sustainable manufacturing.
       </p>
     </div>
+
   </section>
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+
+  <p class="footer-text">Scroll to view timeline | Hover over cards to learn more!</p>
+
 </body>
 </html>
